# relay-gitcode-cli

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  build.sh  check.sh
.gitcode/workflows/: pr-checks.yml
.github/workflows/: code_quality.yml  pr-checks.yml  release.yml
docs/: README.md  repository-settings.md
docs/en/: README.md
docs/en/01-user-guide/: 01-installation-and-authentication.md  02-command-reference.md  03-api-and-scripting.md  README.md
docs/en/02-architecture/: 01-runtime-and-authentication.md  README.md
docs/en/03-operations/: 01-ci-release-and-repository-settings.md  README.md
docs/zh/: README.md
docs/zh/01-user-guide/: 01-installation-and-authentication.md  02-command-reference.md  03-api-and-scripting.md  README.md
docs/zh/02-architecture/: 01-runtime-and-authentication.md  README.md
docs/zh/03-operations/: 01-ci-release-and-repository-settings.md  README.md
scripts/: e2e-repo-move.sh
skills/relay-gitcode-cli/: SKILL.md
skills/relay-gitcode-cli/agents/: openai.yaml
skills/relay-gitcode-cli/references/: cli-workflows.md  gitcode-workflow-yml.md
src/: auth.rs  cli.rs  client.rs  config.rs  encoding.rs  env.rs  http.rs  main.rs  output.rs  pipeline.rs  release_migration.rs  repo.rs  update.rs
src/commands/: mod.rs
tests/: bearer_auth_integration.rs
