[package]
name = "relay-gitcode-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "GitCode command line client with gh-style ergonomics."
license = "MIT"
repository = "https://github.com/coolplayagent/relay-gitcode-cli"
readme = "README.md"
keywords = ["gitcode", "cli", "git", "api"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dirs = "6.0"
keyring = "4.0.1"
keyring-core = "1.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.23"

[lints.rust]
unsafe_code = "forbid"
